move file structure

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 YuSis-Monitor version 0.01
 ==========================
 
+
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
 example C compilers and installed libraries) and any other information
@@ -31,7 +32,7 @@ COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2014 by sleppytonic
+Copyright (C) 2014 by sleepytonic
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.18.2 or,
